Common method added for Send Email

--- a/MyLeoRetailer/Web.config
+++ b/MyLeoRetailer/Web.config
@@ -13,7 +13,14 @@
   </configSections>
 
   <log4net configSource="Log4Net.config" />
-  
+
+  <system.net>
+    <mailSettings>
+      <smtp from="no-reply@gmail.com" deliveryMethod="Network">
+        <network host="smtp.gmail.com" defaultCredentials="false" port="587" enableSsl="true" userName="sanchita.sawant@abacusinfosystem.com" password="sanchita1493" />
+      </smtp>
+    </mailSettings>
+  </system.net>
   
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MyLeoRetailer-20160813232200;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MyLeoRetailer-20160813232200.mdf" providerName="System.Data.SqlClient" />-->
