--- a/MyLeoRetailerInfo/MyLeoRetailerInfo.csproj
+++ b/MyLeoRetailerInfo/MyLeoRetailerInfo.csproj
@@ -63,6 +63,7 @@
     <Compile Include="LookupInfo.cs" />
     <Compile Include="Pagination_Info.cs" />
     <Compile Include="Payable\PayableInfo.cs" />
+    <Compile Include="ProductWarehouse\ProductWarehouseInfo.cs" />
     <Compile Include="Product\ProductInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PurchaseInvoice\PurchaseInvoiceInfo.cs" />
