--- a/MyLeoRetailer/MyLeoRetailer.csproj
+++ b/MyLeoRetailer/MyLeoRetailer.csproj
@@ -181,7 +181,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\PostLogin\Master\PurchaseOrderRequestController.cs" />
+    <Compile Include="Controllers\PostLogin\Transaction\PurchaseOrderRequestController.cs" />
     <Compile Include="Controllers\PostLogin\Transaction\PurchaseReturnRequestController.cs" />
     <Compile Include="Filters\AuthorizeUserAttribute.cs" />
     <Compile Include="Common\CustomRazorViewEngine.cs" />
@@ -201,9 +201,9 @@
     <Compile Include="Controllers\PostLogin\Master\GiftVoucherController.cs" />
     <Compile Include="Controllers\PostLogin\Master\PayableController.cs" />
     <Compile Include="Controllers\PostLogin\Master\ProductController.cs" />
-    <Compile Include="Controllers\PostLogin\Master\PurchaseInvoiceController.cs" />
-    <Compile Include="Controllers\PostLogin\Master\PurchaseOrderController.cs" />
-    <Compile Include="Controllers\PostLogin\Master\PurchaseReturnController.cs" />
+    <Compile Include="Controllers\PostLogin\Transaction\PurchaseInvoiceController.cs" />
+    <Compile Include="Controllers\PostLogin\Transaction\PurchaseOrderController.cs" />
+    <Compile Include="Controllers\PostLogin\Transaction\PurchaseReturnController.cs" />
     <Compile Include="Controllers\PostLogin\Master\ReceivableController.cs" />
     <Compile Include="Controllers\PostLogin\Master\RoleController.cs" />
     <Compile Include="Controllers\PostLogin\Master\SizeController.cs" />
@@ -230,11 +230,11 @@
     <Compile Include="Models\ProductViewModel.cs" />
     <Compile Include="Models\LookupViewModel.cs" />
     <Compile Include="Models\GiftVoucherViewModel.cs" />
-    <Compile Include="Models\PurchaseInvoiceViewModel.cs" />
-    <Compile Include="Models\PurchaseOrderRequestViewModel.cs" />
-    <Compile Include="Models\PurchaseOrderViewModel.cs" />
+    <Compile Include="Models\Transaction\PurchaseInvoiceViewModel.cs" />
+    <Compile Include="Models\Transaction\PurchaseOrderRequestViewModel.cs" />
+    <Compile Include="Models\Transaction\PurchaseOrderViewModel.cs" />
     <Compile Include="Models\ReceivableViewModel.cs" />
-    <Compile Include="Models\PurchaseReturnViewModel.cs" />
+    <Compile Include="Models\Transaction\PurchaseReturnViewModel.cs" />
     <Compile Include="Models\RoleViewModel.cs" />
     <Compile Include="Models\SalesInvoiceViewModel.cs" />
     <Compile Include="Models\SalesReturnViewModel.cs" />
@@ -1153,13 +1153,13 @@
     <Content Include="Views\PostLogin\Master\Product\_ProductPrizing.cshtml" />
     <Content Include="Views\PostLogin\Master\Challan\Index.cshtml" />
     <Content Include="Views\PostLogin\Master\Employee\ChangeBranch.cshtml" />
-    <Content Include="Views\PostLogin\Master\PurchaseOrder\Index.cshtml" />
-    <Content Include="Views\PostLogin\Master\PurchaseOrder\Search.cshtml" />
-    <Content Include="Views\PostLogin\Master\PurchaseOrder\Print.cshtml" />
-    <Content Include="Views\PostLogin\Master\PurchaseInvoice\Search.cshtml" />
-    <Content Include="Views\PostLogin\Master\PurchaseInvoice\Index.cshtml" />
-    <Content Include="Views\PostLogin\Master\PurchaseReturn\Index.cshtml" />
-    <Content Include="Views\PostLogin\Master\PurchaseReturn\Search.cshtml" />
+    <Content Include="Views\PostLogin\Transaction\PurchaseOrder\Index.cshtml" />
+    <Content Include="Views\PostLogin\Transaction\PurchaseOrder\Search.cshtml" />
+    <Content Include="Views\PostLogin\Transaction\PurchaseOrder\Print.cshtml" />
+    <Content Include="Views\PostLogin\Transaction\PurchaseInvoice\Search.cshtml" />
+    <Content Include="Views\PostLogin\Transaction\PurchaseInvoice\Index.cshtml" />
+    <Content Include="Views\PostLogin\Transaction\PurchaseReturn\Index.cshtml" />
+    <Content Include="Views\PostLogin\Transaction\PurchaseReturn\Search.cshtml" />
     <Content Include="Views\PostLogin\SalesOrder\Index.cshtml" />
     <Content Include="Views\PostLogin\SalesOrder\Search.cshtml" />
     <Content Include="Views\PostLogin\SalesReturn\Index.cshtml" />
@@ -1173,8 +1173,8 @@
     <Content Include="Views\PostLogin\Master\Receivable\Pay.cshtml" />
     <Content Include="Views\PostLogin\Master\Payable\Index.cshtml" />
     <Content Include="Views\PostLogin\Master\Payable\Pay.cshtml" />
-    <Content Include="Views\PostLogin\Master\PurchaseOrderRequest\Index.cshtml" />
-    <Content Include="Views\PostLogin\Master\PurchaseOrderRequest\Search.cshtml" />
+    <Content Include="Views\PostLogin\Transaction\PurchaseOrderRequest\Index.cshtml" />
+    <Content Include="Views\PostLogin\Transaction\PurchaseOrderRequest\Search.cshtml" />
     <Content Include="Views\PostLogin\Transaction\PurchaseReturnRequest\Index.cshtml" />
     <Content Include="Views\PostLogin\Transaction\PurchaseReturnRequest\Search.cshtml" />
     <Content Include="Views\PostLogin\SalesOrder\Invoice.cshtml" />
