Generate Purchase order invoice and send email

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\MyLeoRetailer\packages.config" />
+  <repository path="..\MyLeoRetailerRepo\packages.config" />
 </repositories>
