--- a/MyLeoRetailer/Web.config
+++ b/MyLeoRetailer/Web.config
@@ -25,7 +25,7 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MyLeoRetailer-20160813232200;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MyLeoRetailer-20160813232200.mdf" providerName="System.Data.SqlClient" />-->
   
-	<add name="DefaultConnection" connectionString="Data Source=ais-1;Initial Catalog=MyLeo;Persist Security Info=True;User ID=pkuser;Password=Password1#" providerName="System.Data.SqlClient" />
+	<add name="DefaultConnection" connectionString="Data Source=ais-1;Initial Catalog=My_Leo_Test;Persist Security Info=True;User ID=pkuser;Password=Password1#" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
