--- a/MyLeoRetailer/MyLeoRetailer.csproj
+++ b/MyLeoRetailer/MyLeoRetailer.csproj
@@ -1203,6 +1203,7 @@
     <Content Include="Views\PostLogin\Transaction\PurchaseReturnRequest\ViewPurchaseReturnRequest.cshtml" />
     <Content Include="Views\PostLogin\SalesReturn\SalesReturnView.cshtml" />
     <Content Include="Views\PostLogin\SalesOrder\SalesInvoiceView.cshtml" />
+    <Content Include="Views\PostLogin\Transaction\PurchaseReturn\_Update_GR_No.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
