Added new window for change branch.

--- a/MyLeoRetailer/MyLeoRetailer.csproj
+++ b/MyLeoRetailer/MyLeoRetailer.csproj
@@ -1203,6 +1203,9 @@
     <Content Include="Views\PostLogin\Transaction\PurchaseReturnRequest\ViewPurchaseReturnRequest.cshtml" />
     <Content Include="Views\PostLogin\SalesReturn\SalesReturnView.cshtml" />
     <Content Include="Views\PostLogin\SalesOrder\SalesInvoiceView.cshtml" />
+    <Content Include="Views\PostLogin\Dashboard\Index.cshtml" />
+    <Content Include="Views\PostLogin\Master\Employee\_ChangeBranch.cshtml" />
+    <Content Include="Views\Shared\_ChangeBranch.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
