--- a/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
+++ b/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
@@ -58,6 +58,7 @@
     <Compile Include="CustomerRepo.cs" />
     <Compile Include="LoginRepo.cs" />
     <Compile Include="PayableRepo.cs" />
+    <Compile Include="ProductDispatchRepo.cs" />
     <Compile Include="ProductRepo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PurchaseInvoiceRepo.cs" />
