--- a/MyLeoRetailer/MyLeoRetailer.csproj
+++ b/MyLeoRetailer/MyLeoRetailer.csproj
@@ -1036,6 +1036,9 @@
     <Content Include="Scripts\Modules\Payable\Payable_Validation.js" />
     <Content Include="Scripts\Modules\Payable\Pay_event.js" />
     <Content Include="Scripts\Modules\PrintThis.js" />
+    <Content Include="Scripts\Modules\ProductDispatch\Customised_Comman_Method.js" />
+    <Content Include="Scripts\Modules\ProductDispatch\dispatched_product_listing_method.js" />
+    <Content Include="Scripts\Modules\ProductDispatch\dispatched_product_listing_event.js" />
     <Content Include="Scripts\Modules\ProductDispatch\product_dispatch_method.js" />
     <Content Include="Scripts\Modules\ProductDispatch\product_dispatch_event.js" />
     <Content Include="Scripts\Modules\ProductDispatch\search_product_dispatch_event.js" />
