Product : Added Barcode code

--- a/MyLeoRetailer/MyLeoRetailer.csproj
+++ b/MyLeoRetailer/MyLeoRetailer.csproj
@@ -39,6 +39,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BarcodeLib.Barcode.ASP.NET">
+      <HintPath>..\Libraries\BarcodeLib.Barcode.ASP.NET.dll</HintPath>
+    </Reference>
+    <Reference Include="Barcode_Generator">
+      <HintPath>..\Libraries\Barcode_Generator.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
