--- a/MyLeoRetailer/MyLeoRetailer.csproj
+++ b/MyLeoRetailer/MyLeoRetailer.csproj
@@ -39,11 +39,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="BarcodeLib.Barcode.ASP.NET">
-      <HintPath>..\Libraries\BarcodeLib.Barcode.ASP.NET.dll</HintPath>
+    <Reference Include="BarcodeLib.Barcode.ASP.NET, Version=5.0.0.30712, Culture=neutral, PublicKeyToken=f1ec954ce2c30e4e, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Barcode And QRCode Implementation\DLL\BarcodeLib.Barcode.ASP.NET.dll</HintPath>
     </Reference>
-    <Reference Include="Barcode_Generator">
-      <HintPath>..\Libraries\Barcode_Generator.dll</HintPath>
+    <Reference Include="Barcode_Generator, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Barcode And QRCode Implementation\DLL\Barcode_Generator.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
