--- a/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
+++ b/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
@@ -32,11 +32,11 @@
   <ItemGroup>
     <Reference Include="BarcodeLib.Barcode.ASP.NET, Version=5.0.0.30712, Culture=neutral, PublicKeyToken=f1ec954ce2c30e4e, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Libraries\BarcodeLib.Barcode.ASP.NET.dll</HintPath>
+      <HintPath>..\..\Barcode And QRCode Implementation\DLL\BarcodeLib.Barcode.ASP.NET.dll</HintPath>
     </Reference>
     <Reference Include="Barcode_Generator, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Libraries\Barcode_Generator.dll</HintPath>
+      <HintPath>..\..\Barcode And QRCode Implementation\DLL\Barcode_Generator.dll</HintPath>
     </Reference>
     <Reference Include="itextsharp, Version=5.2.0.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
