--- a/MyLeoRetailer/Web.config
+++ b/MyLeoRetailer/Web.config
@@ -27,7 +27,7 @@
   
 	<!--<add name="DefaultConnection" connectionString="Data Source=ais-1;Initial Catalog=MyLeoUAT_Test;Persist Security Info=True;User ID=pkuser;Password=Password1#" providerName="System.Data.SqlClient" />-->
 
-    <add name="DefaultConnection" connectionString="Data Source=ais-1;Initial Catalog=MyLeo_UAT;Persist Security Info=True;User ID=pkuser;Password=Password1#" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=ais-1;Initial Catalog=MyLeoUAT_Test;Persist Security Info=True;User ID=pkuser;Password=Password1#" providerName="System.Data.SqlClient" />
     
   </connectionStrings>
   <appSettings>
