Sales Invoice print Logo added

--- a/MyLeoRetailer/Web.config
+++ b/MyLeoRetailer/Web.config
@@ -34,6 +34,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="ProductImgPath" value="\UploadedFiles\"/>
+    <add key="LogoPath" value="..\Logo\Logo.jpg"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
