--- a/MyLeoRetailer/MyLeoRetailer.csproj
+++ b/MyLeoRetailer/MyLeoRetailer.csproj
@@ -975,6 +975,7 @@
     <Content Include="Content\Atlant\css\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Content\Atlant\js\plugins\jquery\jquery-2.1.1.min.map" />
     <Content Include="Content\Atlant\js\plugins\tableexport\simple_html_dom.php" />
+    <Content Include="Images\notification.gif" />
     <Content Include="Scripts\generic.autocomplete.js" />
     <Content Include="Scripts\generic.custom.validation.js" />
     <Content Include="Scripts\generic.lookup.js" />
@@ -1232,6 +1233,7 @@
     <Content Include="Views\PostLogin\Transaction\PurchaseOrder\Search.cshtml" />
     <Content Include="Views\PostLogin\Transaction\PurchaseOrder\Print.cshtml" />
     <Content Include="Views\PostLogin\Transaction\PurchaseOrder\View.cshtml" />
+    <Content Include="Views\PostLogin\Master\ProductWarehouse\_Warehouse_Notifiation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
