--- a/MyLeoRetailer/MyLeoRetailer.csproj
+++ b/MyLeoRetailer/MyLeoRetailer.csproj
@@ -1241,6 +1241,7 @@
       <SubType>Code</SubType>
     </Content>
     <Content Include="Views\PostLogin\SalesOrder\_SalesDetailsReport.cshtml" />
+    <Content Include="Views\PostLogin\Transaction\PurchaseReturn\Print.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
