changes done in SalesOrderController,SalesInvoiceViewModel,Sales_summary_report_event.js,Sales_summary_report_method.js,SalesSummaryReport.cshtml,Menu.cshtml,Storeprocedures.cs,SalesInvoice.cs,AutocompleteLookupRepo.cs,SalesOrderRepo.cs

--- a/MyLeoRetailer/MyLeoRetailer.csproj
+++ b/MyLeoRetailer/MyLeoRetailer.csproj
@@ -1101,6 +1101,8 @@
     <Content Include="Scripts\Modules\Role\role-validation.js" />
     <Content Include="Scripts\Modules\SalesOrder\salesreport_search_events.js" />
     <Content Include="Scripts\Modules\SalesOrder\salesreport_search_methods.js" />
+    <Content Include="Scripts\Modules\SalesOrder\Sales_summary_report_event.js" />
+    <Content Include="Scripts\Modules\SalesOrder\Sales_summary_report_method.js" />
     <Content Include="Scripts\Modules\Size\size_group_events.js" />
     <Content Include="Scripts\Modules\Size\size_group_methods.js" />
     <Content Include="Scripts\Modules\Size\size_group_validation.js" />
@@ -1241,6 +1243,7 @@
       <SubType>Code</SubType>
     </Content>
     <Content Include="Views\PostLogin\SalesOrder\_SalesDetailsReport.cshtml" />
+    <Content Include="Views\PostLogin\SalesOrder\SalesSummaryReport.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
