Add Barcode Module

--- a/MyLeoRetailer/MyLeoRetailer.csproj
+++ b/MyLeoRetailer/MyLeoRetailer.csproj
@@ -222,6 +222,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BarcodeViewModel.cs" />
     <Compile Include="Models\BranchViewModel.cs" />
     <Compile Include="Models\AlterationViewModel.cs" />
     <Compile Include="Models\BrandViewModel.cs" />
