--- a/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
+++ b/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
@@ -36,7 +36,7 @@
     </Reference>
     <Reference Include="Barcode_Generator, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Libraries\Barcode_Generator.dll</HintPath>
+      <HintPath>C:\Users\ais\Desktop\Barcode_Generator.dll</HintPath>
     </Reference>
     <Reference Include="itextsharp, Version=5.2.0.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="AutocompleteLookupRepo.cs" />
     <Compile Include="AutoGenerateNumberRepo.cs" />
+    <Compile Include="BarcodeRepo.cs" />
     <Compile Include="BranchRepo.cs" />
     <Compile Include="AlterationRepo.cs" />
     <Compile Include="BrandRepo.cs" />
