--- a/MyLeoRetailer/MyLeoRetailer.csproj
+++ b/MyLeoRetailer/MyLeoRetailer.csproj
@@ -1249,6 +1249,7 @@
     <Content Include="Views\PostLogin\SalesOrder\_SalesDetailsReport.cshtml" />
     <Content Include="Views\PostLogin\Barcode\Barcode.cshtml" />
     <Content Include="Views\PostLogin\SalesOrder\SalesSummaryReport.cshtml" />
+    <Content Include="Views\PostLogin\Transaction\PurchaseReturn\Print.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
