Changes in Purchase Return, Purchase Return Request, Purchase Invoice Module

--- a/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
+++ b/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
@@ -36,7 +36,7 @@
     </Reference>
     <Reference Include="Barcode_Generator, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\ais\Desktop\Barcode_Generator.dll</HintPath>
+      <HintPath>..\Libraries\Barcode_Generator.dll</HintPath>
     </Reference>
     <Reference Include="itextsharp, Version=5.2.0.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
