Added golobal date format.

--- a/MyLeoRetailer/Web.config
+++ b/MyLeoRetailer/Web.config
@@ -53,6 +53,7 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+    <globalization enableClientBasedCulture="false" uiCulture="en-IN" culture="en-IN" />
   </system.web>
   
   <system.transactions>
